Disabled parallax below table, fixed table layout issues with search, and hid search label on type

--- a/assets/main.css
+++ b/assets/main.css
@@ -476,15 +476,18 @@ header .cover {
       left: 1rem; }
     .leaderboard .leaderboard-controls .leaderboard-search input {
       padding-left: 3rem;
-      width: 100%; }
-    .leaderboard .leaderboard-controls .leaderboard-search input + label {
+      min-width: 100%; }
+    .leaderboard .leaderboard-controls .leaderboard-search label {
       position: absolute;
       left: 3rem;
       color: #000000;
-      opacity: .5;
       font-size: 1.25rem;
       transition: opacity .16s ease-in-out;
-      pointer-events: none; }
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity .1s ease-out; }
+    .leaderboard .leaderboard-controls .leaderboard-search input.empty + label {
+      opacity: .5; }
   .leaderboard .leaderboard-controls .leaderboard-sort {
     display: flex;
     flex-direction: row;
@@ -521,6 +524,8 @@ header .cover {
   .leaderboard .leaderboard-table table {
     border-collapse: collapse;
     width: 100%; }
+  .leaderboard .leaderboard-table th, .leaderboard .leaderboard-table td {
+    min-width: 5rem; }
   .leaderboard .leaderboard-table th {
     letter-spacing: .2rem;
     text-transform: uppercase;
@@ -546,6 +551,13 @@ header .cover {
     .leaderboard .leaderboard-table th:nth-of-type(1), .leaderboard .leaderboard-table td:nth-of-type(1),
     .leaderboard .leaderboard-table th:nth-of-type(3), .leaderboard .leaderboard-table td:nth-of-type(3) {
       display: none; } }
+  .leaderboard .leaderboard-table th:nth-of-type(2), .leaderboard .leaderboard-table td:nth-of-type(2) {
+    width: 70%; }
+  @media (min-width: 68rem) {
+    .leaderboard .leaderboard-table th:nth-of-type(1), .leaderboard .leaderboard-table td:nth-of-type(1),
+    .leaderboard .leaderboard-table th:nth-of-type(3), .leaderboard .leaderboard-table td:nth-of-type(3),
+    .leaderboard .leaderboard-table th:nth-of-type(4), .leaderboard .leaderboard-table td:nth-of-type(4) {
+      width: 10%; } }
   .leaderboard .leaderboard-table th:nth-of-type(2), .leaderboard .leaderboard-table td:nth-of-type(2) {
     text-align: left;
     padding-left: 1rem; }
@@ -662,14 +674,5 @@ header .cover {
         max-width: 50%;
         margin-right: 6rem;
         margin-top: 4rem; } }
-  @media (min-width: 75rem) {
-    .webCTA .webCTA-course-1 {
-      bottom: calc(10% + 28rem); }
-    .webCTA .webCTA-course-2 {
-      top: calc(35% + 28rem); }
-    .webCTA .webCTA-dots-1 {
-      top: calc(5% - 28rem); }
-    .webCTA .webCTA-dots-2 {
-      bottom: calc(12% + 42rem); } }
 
 /*# sourceMappingURL=main.css.map */
