--- a/assets/scss/components/_leaderboard.scss
+++ b/assets/scss/components/_leaderboard.scss
@@ -25,17 +25,22 @@
 
             input {
                 padding-left: 3rem;
-                width: 100%;
+                min-width: 100%;
             }
 
-            input + label {
+            label {
                 position: absolute;
                 left: 3rem;
                 color: $color-neutral-dark;
-                opacity: .5;
                 font-size: $size-large;
                 transition: opacity .16s ease-in-out;
                 pointer-events: none;
+                opacity: 0;
+                transition: opacity .1s ease-out;
+            }
+
+            input.empty + label {
+                opacity: .5;
             }
 
         }
@@ -93,6 +98,10 @@
             width: 100%;
         }
 
+        th, td {
+            min-width: 5rem;
+        }
+
         th {
             @include caps;
             letter-spacing: .1em;
@@ -123,6 +132,20 @@
             th:nth-of-type(1), td:nth-of-type(1),
             th:nth-of-type(3), td:nth-of-type(3) {
                 display: none;
+            }
+        }
+
+        th:nth-of-type(2), td:nth-of-type(2) {
+            width: 70%;
+        }
+
+        
+
+        @media (min-width: 68rem) {
+            th:nth-of-type(1), td:nth-of-type(1),
+            th:nth-of-type(3), td:nth-of-type(3),
+            th:nth-of-type(4), td:nth-of-type(4) {
+                width: 10%;
             }
         }
 
